# senjun-courses

./: .gitignore  .gitmodules  COMPOSE.md  Makefile  README.md  compose.yml  docker-compose.yml
about/: course_structure.md
compose-configs/: README.md
compose-configs/pgadmin/: servers.json
compose-configs/scene/: conf.json
compose-configs/watchman_cpp/: watchman_cpp_config.json
cpp/: contents.md  description.md  tags.json  wrapper_run_fallback
cpp/cpp_chapter_0000/: text.md
cpp/cpp_chapter_0010/: text.md
cpp/cpp_chapter_0011/: text.md
cpp/cpp_chapter_0012/: text.md
cpp/cpp_chapter_0020/: text.md
cpp/cpp_chapter_0021/: text.md
cpp/cpp_chapter_0022/: text.md
cpp/cpp_chapter_0023/: text.md
cpp/cpp_chapter_0030/: keywords.md  text.md
cpp/cpp_chapter_0031/: text.md
cpp/cpp_chapter_0032/: text.md
cpp/cpp_chapter_0040/: text.md
cpp/cpp_chapter_0041/: text.md
cpp/cpp_chapter_0042/: text.md
cpp/cpp_chapter_0050/: text.md
cpp/cpp_chapter_0051/: text.md
cpp/cpp_chapter_0052/: text.md
cpp/cpp_chapter_0053/: text.md
cpp/cpp_chapter_0054/: text.md
cpp/cpp_chapter_0055/: text.md
cpp/cpp_chapter_0056/: text.md
cpp/cpp_chapter_0057/: text.md
cpp/cpp_chapter_0060/: text.md
cpp/cpp_chapter_0061/: text.md
cpp/cpp_chapter_0062/: text.md
cpp/cpp_chapter_0070/: text.md
cpp/cpp_chapter_0071/: text.md
cpp/cpp_chapter_0072/: text.md
cpp/cpp_chapter_0073/: text.md
cpp/cpp_chapter_0074/: text.md
cpp/cpp_chapter_0075/: text.md
cpp/cpp_chapter_0080/: text.md
cpp/cpp_chapter_0081/: text.md
cpp/cpp_chapter_0082/: text.md
cpp/cpp_chapter_0083/: text.md
cpp/cpp_chapter_0090/: text.md
cpp/cpp_chapter_0091/: text.md
cpp/cpp_chapter_0092/: text.md
cpp/cpp_chapter_0100/: text.md
cpp/cpp_chapter_0101/: text.md
cpp/cpp_chapter_0102/: text.md
cpp/cpp_chapter_0103/: text.md
cpp/cpp_chapter_0110/: text.md
cpp/cpp_chapter_0111/: text.md
cpp/cpp_chapter_0112/: text.md
cpp/cpp_chapter_0113/: text.md
cpp/cpp_chapter_0120/: text.md
cpp/cpp_chapter_0121/: text.md
cpp/cpp_chapter_0122/: text.md
cpp/cpp_chapter_0130/: text.md
cpp/cpp_chapter_0131/: text.md
cpp/cpp_chapter_0132/: text.md
cpp/cpp_chapter_0140/: text.md
cpp/cpp_chapter_0141/: text.md
cpp/cpp_chapter_0142/: text.md
cpp/cpp_chapter_0150/: text.md
cpp/cpp_chapter_0151/: text.md
cpp/cpp_chapter_0152/: text.md
cpp/cpp_chapter_0153/: text.md
cpp/cpp_chapter_0154/: text.md
cpp/cpp_chapter_0155/: text.md
cpp/cpp_chapter_0156/: text.md
cpp/cpp_chapter_0157/: text.md
cpp/cpp_chapter_0160/: text.md
cpp/cpp_chapter_0161/: text.md
cpp/cpp_chapter_0162/: text.md
cpp/cpp_chapter_0163/: text.md
cpp/practice/cpp_brainfuck_interpreter/project/: CMakeLists.txt  brainfuck.cppm  main.cpp  test_helpers.cppm  tests.cpp
cpp/practice/cpp_brainfuck_interpreter/project/examples/: perl_tradition.b  print_b.b  print_b_other_way.b  print_hello_world.b  reverse_number.b  squares.b
cpp/practice/cpp_calculator/project/: CMakeLists.txt  calculator.cppm  main.cpp  precompiled_modules.cmake  tests.cpp
cpp/practice/cpp_div_without_div/project/: CMakeLists.txt  div.cppm  div.h  main.cpp  tests.cpp
cpp/practice/cpp_lru_cache/project/: CMakeLists.txt  benchmarks.cpp  tests.cpp
cpp/practice/cpp_lru_cache/project/lru_cache/: CMakeLists.txt  lru_cache.cpp  lru_cache.h
cpp/practice/cpp_lru_cache/project_solution/: CMakeLists.txt  benchmarks.cpp  tests.cpp
cpp/practice/cpp_lru_cache/project_solution/lru_cache/: CMakeLists.txt  lru_cache.cpp  lru_cache.h
cpp/tests_boilerplate/: CMakeLists.txt  fib.cpp
examples/python/: server_client.py
golang/: description.md  tags.json
golang/golang_chapter_0010/: text.md
golang/golang_chapter_0020/: text.md
golang/golang_chapter_0030/: text.md
golang/golang_chapter_0040/: text.md
golang/golang_chapter_0050/: text.md
golang/golang_chapter_0060/: text.md
golang/golang_chapter_0070/: text.md
golang/golang_chapter_0080/: text.md
golang/golang_chapter_0090/: text.md
golang/golang_chapter_0100/: text.md
golang/golang_chapter_0110/: text.md
golang/golang_chapter_0120/: text.md
golang/golang_chapter_0130/: text.md
golang/golang_chapter_0140/: text.md
golang/golang_chapter_0150/: text.md
golang/golang_chapter_0160/: text.md
golang/golang_chapter_0170/: text.md
golang/golang_chapter_0180/: text.md
golang/golang_chapter_0190/: text.md
golang/golang_chapter_0200/: text.md
golang_chapter_0110/: text.md
haskell/: description.md  tags.json
haskell/haskell_chapter_0010/: text.md
haskell/haskell_chapter_0020/: text.md
haskell/haskell_chapter_0030/: text.md
haskell/haskell_chapter_0040/: text.md
haskell/haskell_chapter_0050/: text.md
haskell/haskell_chapter_0060/: text.md
haskell/haskell_chapter_0070/: text.md
haskell/haskell_chapter_0080/: text.md
haskell/haskell_chapter_0090/: text.md
haskell/haskell_chapter_0100/: text.md
haskell/haskell_chapter_0110/: text.md
haskell/haskell_chapter_0120/: text.md
haskell/haskell_chapter_0130/: text.md
haskell/haskell_chapter_0140/: text.md
haskell/haskell_chapter_0150/: text.md
haskell/haskell_chapter_0160/: text.md
haskell/haskell_chapter_0170/: text.md
haskell/haskell_chapter_0180/: text.md
haskell/haskell_chapter_0190/: text.md
haskell/haskell_chapter_0200/: text.md
haskell/haskell_chapter_0210/: text.md
haskell/haskell_chapter_0220/: text.md
haskell/haskell_chapter_0230/: text.md
haskell/haskell_chapter_0240/: text.md
haskell/haskell_chapter_0250/: text.md
python/: description.md  tags.json
python/python_chapter_0010/: text.md
python/python_chapter_0020/: text.md
python/python_chapter_0030/: text.md
python/python_chapter_0040/: text.md
python/python_chapter_0050/: text.md
python/python_chapter_0060/: text.md
python/python_chapter_0070/: text.md
python/python_chapter_0080/: text.md
python/python_chapter_0090/: text.md
python/python_chapter_0100/: text.md
rust/: chapter_list.md  description.md  tags.json  work_notes.md  wrapper_playground_fallback  wrapper_run_fallback
(+1023 files in other folders)
